compiler/testData/diagnostics/testsWithJvmBackend/contextReceivers/kt59590WithContextReceiver.fir.kt
// WITH_STDLIB
// !RENDER_ALL_DIAGNOSTICS_FULL_TEXT

object O {
    <!UNSUPPORTED_FEATURE!>context(O)<!>
    @JvmField
    val INSTANCE: O? = null
}
